Using Java 10 Local Variable Type Inference.